--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           нажмите на картинку или <b><a href="https://ru.wikipedia.org/wiki/%D0%A7%D0%B5%D0%B1%D0%BE%D0%BA%D1%81%D0%B0%D1%80%D1%8B">
           сюда</a></b></em></font></p>
           <a href="https://ru.wikipedia.org/wiki/%D0%A7%D0%B5%D0%B1%D0%BE%D0%BA%D1%81%D0%B0%D1%80%D1%8B">
-          <img src = "Wiki.png" align = "left" width="300" height="600" alt="Википедия"
+          <img src = "https://github.com/Igorekmakarek/julieWeb.github.io/blob/main/Wiki.png" align = "left" width="300" height="600" alt="Википедия"
           vspace="15" hspace="15" border="5" bordercolor="#ffffff"></a>
             </td>
             <td align="center" valign="top">
@@ -43,7 +43,7 @@
               <p><li><a href="http://old-gcheb.cap.ru/SiteMap.aspx?id=27789">Историческая справка</a></li></p>
               <p><li><a href="https://visitvolga.ru/about/photogallery/sceneries/">Фотогаллерея</a></li></p>
             </ul>
-            <img src = "PhotoGallery.png" width="700" height="350" alt="Википедия"
+            <img src = "https://github.com/Igorekmakarek/julieWeb.github.io/blob/main/PhotoGallery.png" width="700" height="350" alt="Википедия"
             vspace="15" hspace="15" border="5" bordercolor="#ffffff">
 
                 </font>
