--- a/homePage.html
+++ b/homePage.html
@@ -25,8 +25,11 @@ aLINK="000088"
 <p><center>для тех, кто еще не знает, как я выгляжу, - моя фотография:
 </p></center>
 <p><center>
-<img SRC="мое фото.png">
+<img SRC="myPhoto.jpg" width="250" height="350" alt="Википедия"
+            vspace="15" hspace="15" border="5" bordercolor="#ffffff">
 </p></center>
+<center><b><a href="http://www.yandex.ru"> Страница Обзор </a></b></center>
+<center><b><a href="http://www.yandex.ru"> Страница Путеводитель </a></b></center>
 <hr>
 <center>
 Можете поробовать поискать информацию обо мне на
